--- a/index.html
+++ b/index.html
@@ -2,26 +2,27 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Psychic Game</title>
 </head>
 <body>
 
-<script type="text/javascript">
+<h1>Psychic Game</h1>
 
+<p>Guess what letter I'm thinking of</p>
 
-// set guesses variable to 9
-// set wins variable to 0
-// set losses variable to 0
-// add array of every letterin alphabet
-// randomly select a letter from array
-// add keypress
-// if keypress is incorrect, decrement guesses left
-// display letters chosen
-// after 9 incorrect guesses, increment losses
-// if keypress is correct, increment wins
+<div id="wins">
+</div>
 
+<div id="losses">
+</div>
 
-</script>
+<div id="guesses">
+</div>
+
+<div id="chosen">
+</div>
+
+<script type="text/javascript" src=assets/javascript/game.js></script>
 	
 </body>
 </html>
